# litterbox

./: ARCHITECTURE.md  LitterboxDiagram.drawio  README.md
.github/workflows/: make-release.yml  publish-website.yml
litterbox/: Cargo.toml
litterbox/src/: agent.rs  daemon.rs  devices.rs  entrypoint.rs  env.rs  files.rs  keys.rs  main.rs  podman.rs  sandbox.rs  settings.rs  template.rs  utils.rs
litterbox/src/commands/: build.rs  confirm.rs  daemon.rs  define.rs  delete.rs  device.rs  enter.rs  entrypoint.rs  list.rs  mod.rs  wait.rs
litterbox/src/commands/keys/: attach.rs  change_password.rs  delete.rs  detach.rs  generate.rs  import.rs  list.rs  mod.rs  print.rs
litterbox/templates/: cachyos.Dockerfile  tumbleweed.Dockerfile  ubuntu-latest.Dockerfile
website/: package.json  pnpm-lock.yaml
