[package]
name = "litterbox"
version = "0.3.1"
edition = "2024"
default-run = "litterbox"

[dependencies]
names = { path = "../names" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
nix = { version = "0.31", features = ["fs", "signal", "inotify"] }
serde_json = "1.0"
tabled = "0.20"
inquire = "0.9"
inquire-derive = "0.9"
russh = "0.57"
ron = "0.12"
argon2 = "0.5"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1", features = ["rt", "process", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
eframe = "0.33"
egui_extras = { version="0.33", features=["svg"] }
futures = "0.3"
strum = "0.28"
strum_macros = "0.28"
anyhow = "1.0"
