[package]
name = "litterbox"
version = "0.4.0"
edition = "2024"
default-run = "litterbox"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33"
egui_extras = { version = "0.33", features = ["svg"] }
env_logger = "0.11"
futures = "0.3"
inquire = "0.9"
inquire-derive = "0.9"
landlock = "0.4"
log = "0.4"
names = { path = "../names" }
nix = { version = "0.31", features = ["fs", "inotify", "signal", "user"] }
ron = "0.12"
russh = "0.58"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
tabled = "0.20"
tokio = { version = "1", features = ["fs", "process", "rt", "signal"] }
tokio-stream = { version = "0.1", features = ["net"] }
